# localplaud

./: .dockerignore  .env.example  .gitignore  AGENTS.md  CLAUDE.md  CONTINUATION.md  Caddyfile  Dockerfile  Dockerfile.cuda  LICENSE  README.md  TODO.md  config.example.toml  docker-compose.yml  pyproject.toml
.claude/: model-routing.md
.claude/skills/codex-computer-use/: SKILL.md
.claude/skills/codex-implementation/: SKILL.md
.claude/skills/codex-review/: SKILL.md
.github/workflows/: ci.yml
.opencode/agents/: transcript-polish.md
docs/: acceptance.md  backups.md  benchmarking.md  brand.md  deploy.md  email-integrations.md  handoff-2026-07-10.md  plaud-api.md  product-workflow.md  remote-worker.md  support.md  webhooks.md
docs/adr/: 0001-tech-stack.md  0002-plaud-auth-strategy.md  0003-pluggable-asr.md  0004-deployment-profiles.md  0005-storage-model.md  0006-security-posture.md  0007-subscription-independence.md
scripts/deploy/: bootstrap.sh  smoke-test.sh
src/localplaud/: __init__.py  acceptance.py  ask_skills.py  ask_threads.py  automations.py  backup_sync.py  backups.py  benchmark.py  bulk_export.py  cli.py  config.py  date_filters.py  editable_notes.py  email_integrations.py  error_redaction.py  export_formats.py  exporter.py  i18n.py  imports.py  integrations.py  library_search.py  local_cleanup.py  logging.py  markdown.py  mindmap_export.py  note_history.py  ollama.py  openai_budget.py  preferences.py  system_info.py  template_auto.py  vocabulary.py  waveform.py
src/localplaud/api/: app.py  automations.py  backups.py  imports.py  integrations.py  media.py  note_templates.py  notes.py  providers.py  share_links.py  system.py  vocabulary.py
src/localplaud/api/static/: README.md
src/localplaud/api/templates/: _acceptance_panel.html  _answer.html  _ask_history.html  _ask_thread.html  _file_answer.html  _filelist.html  _note_history.html  _transcript_page.html  _user_note_history.html  base.html  detail.html  detail_loading.html  discover.html  home.html  index.html  index_loading.html  login.html  note_version.html  notes.html  notifications.html  search.html  settings.html  share.html  status.html  templates.html
src/localplaud/asr/: assemblyai_provider.py  base.py  deepgram_provider.py  faster_whisper_provider.py  mlx_provider.py  openai_provider.py  registry.py  vad.py  whispercpp_provider.py
src/localplaud/assets/fonts/: README.md
src/localplaud/db/: migrations.py  models.py  session.py
src/localplaud/embeddings/: base.py  local.py  ollama_embed.py  openai_embed.py
src/localplaud/llm/: anthropic_llm.py  base.py  codex_local.py  ollama.py  openai_llm.py  opencode_go.py
src/localplaud/plaud/: __init__.py  auth.py  client.py  common.py  mcp.py  models.py  oauth.py  official.py
src/localplaud/poller/: poll.py
src/localplaud/providers/: __init__.py  contracts.py  fallback.py  hardware.py  resolver.py  service.py  usage.py
src/localplaud/remote/: __init__.py  client.py  protocol.py  registry.py  server.py
src/localplaud/store/: files.py  speakers.py
src/localplaud/worker/: align.py  claims.py  convert.py  diarize.py  index.py  knowledge_index.py  mindmap.py  pipeline.py  polish.py  qa.py  reindex.py  summarize.py  summary_templates.py  transcribe.py
tests/: conftest.py  test_alignment.py  test_api_and_ingest.py  test_ask_history_service.py  test_ask_threads.py  test_asr_datamodel.py  test_asr_registry.py  test_automations.py  test_backups.py  test_benchmark.py  test_bulk_export.py  test_cli.py  test_cli_ops.py  test_codex_local.py  test_config.py  test_config_layering.py  test_convert.py  test_date_filters.py  test_db.py  test_deploy_images.py  test_diarize.py  test_email_integrations.py  test_error_redaction.py  test_exporter.py  test_hardware_profiles.py  test_imports.py  test_independent_migration.py  test_integrations.py  test_knowledge_index.py  test_knowledge_index_schema.py  test_library_search.py  test_library_views.py  test_local_cleanup.py  test_manual_notes_service.py  test_manual_notes_ui.py  test_mind_map_rebuild.py  test_mindmap.py  test_modal_visibility.py  test_note_history.py  test_note_templates.py  (+38 more)
