[project]
name = "localplaud"
version = "0.1.0"
description = "Self-hosted replacement for the Plaud Intelligence workflow, from raw audio to diarized transcripts, notes, Ask, and export."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "Sky Hong" }]
keywords = ["plaud", "transcription", "whisper", "diarization", "self-hosted", "asr"]

dependencies = [
    "httpx>=0.27",
    "pydantic>=2.7",
    "pydantic-settings>=2.3",
    "sqlalchemy>=2.0",
    "typer>=0.12",
    "rich>=13.7",
    "tomlkit>=0.13",
    "python-dotenv>=1.0",
    "fastapi>=0.111",
    "uvicorn[standard]>=0.30",
    "jinja2>=3.1",
    "python-multipart>=0.0.9",
    "numpy>=1.26",
    "tenacity>=8.4",
    "apscheduler>=3.10",
    "pillow>=11.0",
    "python-docx>=1.1",
    "reportlab>=4.2",
]

[project.optional-dependencies]
# Local ASR via CTranslate2 (CPU + CUDA). The default local engine.
faster-whisper = ["faster-whisper>=1.0"]
# Native NVIDIA CUDA: driver alone isn't enough — CTranslate2 needs the cuBLAS
# and cuDNN 9 libs. (Not needed with Dockerfile.cuda, which bundles them.)
cuda = ["faster-whisper>=1.0", "nvidia-cublas-cu12", "nvidia-cudnn-cu12>=9.0"]
# Apple Silicon local ASR (Metal via MLX).
# mlx-whisper imports numba for word timestamps. Keep NumPy within numba's
# supported range so a routine dependency upgrade cannot disable ASR at import.
mlx = ["mlx-whisper>=0.4", "numpy>=1.26,<2.5"]
# Local speaker diarization + alignment.
diarize = ["pyannote.audio>=4.0", "torch>=2.8"]
# True wav2vec2 word alignment through WhisperX. Optional because it downloads
# language-specific alignment models and adds a substantial native torch stack.
forced-align = ["whisperx>=3.4"]
# Voice Activity Detection for the local (mlx/whispercpp) ASR path. faster-whisper
# bundles its own silero VAD, so it does NOT need this extra.
vad = ["silero-vad>=5.1", "torch>=2.8"]
# Local summaries / Q&A embeddings without any cloud provider.
local-llm = ["sentence-transformers>=3.0"]
# Cloud ASR / LLM SDKs (optional; only if you use those providers).
cloud = ["openai>=1.35", "deepgram-sdk>=3.2", "assemblyai>=0.28", "anthropic>=0.30"]
dev = ["pytest>=8.2", "ruff>=0.5", "mypy>=1.10", "respx>=0.21", "pypdf>=5.0"]

[project.scripts]
localplaud = "localplaud.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/localplaud"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "W"]
ignore = ["E501"]

[tool.pytest.ini_options]
testpaths = ["tests"]
